Rewrite task 26